<resources>
    <string name="app_name">CharTracker</string>
    <string name="SignIn">Sign In</string>
    <string name="emailHint">Enter Email</string>
    <string name="passwordHint">Enter Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="stories">Stories</string>
    <string name="add_story">Add Story</string>
    <string name="title">Title:</string>
    <string name="title_hint">Enter title</string>
    <string name="genre">Genre:</string>
    <string name="genre_hint">Enter genre</string>
    <string name="type">Type:</string>
    <string name="type_hint">Enter type (e.g. book)</string>
    <string name="author">Author:</string>
    <string name="author_hint">Enter author</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="add_story_desc">Add a new story</string>
    <string name="characters">Characters</string>
    <string name="add_character_desc">Add a character</string>
    <string name="edit_story">Edit story</string>
    <string name="delete">Delete</string>
    <string name="add_character">Add Character</string>
    <string name="name">Name:</string>
    <string name="name_hint">Enter name</string>
    <string name="aliases">Aliases:</string>
    <string name="aliases_hint">Enter aliases</string>
    <string name="titles">Titles:</string>
    <string name="titles_hint">Enter titles</string>
    <string name="age">Age:</string>
    <string name="age_hint">Enter age</string>
    <string name="home">Home:</string>
    <string name="home_hint">Enter home</string>
    <string name="gender">Gender:</string>
    <string name="gender_hint">Enter gender</string>
    <string name="race">Race:</string>
    <string name="race_hint">Enter race (such as human)</string>
    <string name="living_dead">Living/Dead:</string>
    <string name="living_dead_hint">Enter living or dead</string>
    <string name="occupation">Occupation:</string>
    <string name="occupation_hint">Enter occupation</string>
    <string name="weapon">Weapon(s):</string>
    <string name="weapon_hint">Enter weapon(s)</string>
    <string name="tools_equipment">Tools/Equipment:</string>
    <string name="tools_equipment_hint">Enter tools/equipment</string>
    <string name="bio">Bio:</string>
    <string name="bio_hint">Enter important info</string>
    <string name="faction">Faction:</string>
    <string name="faction_hint">Enter faction</string>
    <string name="allies">Allies:</string>
    <string name="enemies">Enemies:</string>
    <string name="neutral">Neutral:</string>
    <string name="character_details">Character Details</string>
    <string name="edit">Edit</string>
    <string name="edit_character">Edit Character</string>
    <string name="password_confirm">Confirm Password:</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="sign_in_credentials">Sign In With Saved Credentials</string>
    <string name="story_image_desc">Image representing the story</string>
    <string name="overflow_menu">Overflow menu</string>
    <string name="email_verification_instructions">A verification email was sent to the below email. Please verify to continue.</string>
    <string name="resend">Resend</string>
    <string name="go_to_sign_in">Continue to Sign In</string>
    <string name="Im_verified">I\'m verified!</string>
    <string name="change_email">Change email</string>
    <string name="update_email">Update Email</string>
    <string name="update_email_prompt">Update Email:</string>
    <string name="update_email_hint">Enter New Email</string>
    <string name="current_email_header">Current Email</string>
    <string name="new_email">Input new email</string>
    <string name="email_update_instructions">A verification email will be sent to the new email. Verify that email to complete the update.</string>
    <string name="password_reset">Send password reset email</string>
    <string name="update_password">Update Password</string>
    <string name="update_password_prompt">Update Password:</string>
    <string name="update_password_hint">Enter New Password</string>
    <string name="new_password">New password</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="select_image">Select image</string>
    <string name="current_image">Current image</string>
    <string name="selected_image">Selected image</string>
    <string name="current_story_image_desc">The current image representing the story</string>
    <string name="selected_story_image_desc">The image selected to replace the current story image</string>
    <string name="remove_image">Remove image</string>
    <string name="remove_currrent_image">Remove current image</string>
    <string name="remove_selected_image">Remove selected image</string>
    <string name="character_image_desc">Image representing the character</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="password_confirm_hint">Confirm New Password</string>
    <string name="scroll_to_top">scroll to the top</string>
    <string name="submit_char">Submit character</string>
    <string name="submit_story">Submit story</string>
    <string name="entity_image">Entity image</string>
    <string name="up_button">Up button</string>
    <string name="invalid_email_password">Invalid email or password!</string>
    <string name="password_reset_email_sent">Password reset email was sent to the email if it matches a user. Please wait a moment for it to arrive.</string>
    <string name="malformed_email_message">Malformed email</string>
    <string name="user_collision_message">User with this email already exists! Please login or use a different email.</string>
    <string name="fail_user_reload_message">Error with account!</string>
    <string name="email_sent">Email sent!</string>
    <string name="not_verified">Email not yet verified. Please try again in a moment.</string>
    <string name="missing_email_password">Missing email and/or password!</string>
    <string name="missing_email">Missing email!</string>
    <string name="missing_password">Missing password!</string>
    <string name="invalid_user">Error with account. Try signing in again.</string>
    <string name="password_update_success">Password successfully updated!</string>
    <string name="reauth_message">This operation requires a recent sign in. Enter password to continue.</string>
    <string name="failed_get_stories">Issue getting stories. Refresh to try again.</string>
    <string name="story_upload_error">Error uploading story!</string>
    <string name="failed_get_characters">Issue getting characters. Refresh to try again.</string>
    <string name="failed_get_character">Issue getting the character. Return to try again.</string>
    <string name="char_upload_error">Error uploading character!</string>
    <string name="char_retrieval_error">Error retrieving character data!</string>
    <string name="no_network_connection">No network connection!</string>
    <string name="duplicate_title_error">Duplicate title! Ensure each title is unique.</string>
    <string name="duplicate_name_error">Duplicate name! Ensure each name in each story is unique.</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="reverse_alphabetical">Reverse Alphabetical</string>
    <string name="recent">Most Recent</string>
    <string name="reverse_recent">Least Recent</string>
    <string name="sorting_menu_desc">Opens menu for sorting options</string>
    <string name="unexpected_exception">Unexpected error.</string>
    <string name="signUp_wrong_email">If the email is incorrect:</string>
    <string name="cropping_error">Error cropping the image!</string>
    <string name="retrieval_error">Error retrieving the data!</string>
    <string name="selected_chip">Selected option</string>
    <string name="refresh">Refresh</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account? It is irreversible!</string>
    <string name="confirm_delete_character">Are you sure you want to delete this character? It is irreversible!</string>
    <string name="confirm_delete_story">Are you sure you want to delete this story? It is irreversible!</string>
    <string name="confirm_sign_out">Are you sure you want to sign out of your account?</string>
    <string name="confirm_back">Are you sure you want to go back? All current progress will be lost?</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="factions">FACTIONS</string>
    <string name="failed_get_factions">Issue getting factions. Refresh to try again.</string>
    <string name="add">Add</string>
    <string name="edit_factions">Edit factions</string>
    <string name="submit_factions">Submit factions changes</string>
    <string name="delete_faction">Delete faction</string>
    <string name="confirm_submit_factions">Are you sure you want to submit all changes? All changes are irreversible!</string>
    <string name="duplicate_faction_error">Duplicate faction! Ensure each faction in each story is unique.</string>
    <string name="failed_update_factions">Issue updating factions.</string>
</resources>