...
    name = "Regular Light Mode")
@Composable
fun PreviewCharacterDetailsScreen(){
    CharTrackerTheme {
        Surface {
            val character = CharacterEntity(
                name = "Aragorn",
                aliases = "Strider",
                titles = "King of Gondor and Arnor",
                age = "80",
                home = "Rivendell (Imladris)",
                gender = "male",
                race = "man/Númenórean",
                livingOrDead = "living",
                occupation = "Ranger then King",
                weapons = "Andúril",
                toolsEquipment = "",
                bio = "The ranger from the North who would be king and unite the kingdoms",
                faction = listOf("Men of the West"),
                allies = listOf("Frodo Baggins", "Gandalf", "Gimli", "Legolas", "Farimir"),
                enemies = listOf("Sauron", "Sauruman", "Corsairs of Umbar"),
                neutral = listOf("Someone"),
                imageFilename = null,
                imagePublicUrl = null
                )
            CharacterDetailsScreen(
                character = character,
...
